<resources>
    <!-- activity_login -->
    <string name="app_name">GrabOn</string>
    <string name="grab_on">Grab On</string>
    <string name="user_login">User Login</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>

    <!-- activity_register -->
    <string name="new_user_signup">New User Signup</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="user_signup">New User? SignUp Here</string>
    <string name="email">Email:</string>

    <!-- activity_main -->
    <string name="my_profile">My Profile</string>
    <string name="name">Name:</string>
    <string name="proceed_for_payment">Proceed For Payment</string>
    <string name="logout">Logout</string>

    <!-- activity_paypal_payment_client -->
    <string name="paypal_payment">Paypal payment method</string>
    <string name="click_to_pay">Amount Due: </string>
    <string name="pay_now">Pay Now</string>

    <!--
        <string name="facebook_app_id">248869066145604</string>
        <string name="fb_login_protocol_scheme">fb248869066145604</string>
     -->

    <string name="facebook_app_id">571500067049301</string>
    <string name="fb_login_protocol_scheme">fb571500067049301</string>

    <string name="notification">Notification</string>

    <string name="distance_prompt">In Miles</string>
    <string-array name="distance">
        <item>mi</item>
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
    </string-array>

    <string name="category_prompt">Select Category</string>
    <string name="TOAST_STRING" />
    <string-array name="categories">
        <item>Select Category</item>
        <item>Appliances</item>
        <item>Automobiles</item>
        <item>Electronics</item>
        <item>Fashion</item>
        <item>Freebies</item>
        <item>Furniture</item>
        <item>Home &amp; Garden</item>
        <item>Movies &amp; Music</item>
        <item>Office</item>
        <item>Other</item>
        <item>Sports</item>
        <item>Toys &amp; Games</item>
    </string-array>


</resources>
